--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <title>Contact | Your Name</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -55,12 +56,12 @@
       </div>
     </section>
   </div>
-
+</body>
   <footer>
     <div class="container">
       Copyright &copy; 
     </div>
   </footer>
-</body>
+
 
 </html>
